feat: add KYC status by phone endpoint
